--- a/cours-html/site_marco/index.html
+++ b/cours-html/site_marco/index.html
@@ -586,5 +586,21 @@
         </div>
       </div>
     </footer>
+    <div id="basdepage">
+      <div>
+        <p>
+          BSP Auto - Agence de voyages française - Tel : +33 (0)1.86.26.90.80
+        </p>
+        <div id="lien">
+          <div>
+            <a href="#">Conditions de ventes</a>
+            <a href="#">Mentions légales</a>
+            <a href="#">FAQ/Aide</a>
+            <a href="#">Agences et entreprises</a>
+            <a href="#">CE/CSE</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
